src/objects/ExternalSystemLookup__c.object
<CustomObject>
    <description>Department ID transformation rules object for SAP BPC
Oracle Company ID transformation rules</description>
    <fields>
        <fullName>Ancils__c</fullName>
        <label>Ancils</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barter__c</fullName>
        <label>Barter</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuyingGroup__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Theater &amp; Clubs</fullName>
                </value>
                <value>
                    <fullName>EDM Touring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoPromoter__c</fullName>
        <label>Co-Promoter</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyGLAccountUnit__c</fullName>
        <label>Company GL Account Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FCST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventSubType__c</fullName>
        <description>Event Subtype</description>
        <label>Event Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EventType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Club Night</fullName>
                </value>
                <value>
                    <fullName>Filler Show</fullName>
                </value>
                <value>
                    <fullName>Internal Rental</fullName>
                </value>
                <value>
                    <fullName>Radio Show</fullName>
                </value>
                <value>
                    <fullName>Restaurant Show</fullName>
                </value>
                <value>
                    <fullName>Special Event</fullName>
                </value>
                <value>
                    <fullName>Tentpole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <description>Event Type</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoted</fullName>
                </value>
                <value>
                    <fullName>Buy Sell</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalCode__c</fullName>
        <label>External  Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalGLNotes__c</fullName>
        <label>External GL Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLAccountCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GLAccount__c</referenceTo>
        <relationshipLabel>External System Lookups</relationshipLabel>
        <relationshipName>ExternalSystemLookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLCode__c</fullName>
        <formula>GLAccountCode__r.GLCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCompanyName__c</fullName>
        <label>GL Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OperatingExpense__c</fullName>
        <label>Operating Expense</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationName__c</fullName>
        <label>Operation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCompany__c</fullName>
        <label>Oracle Company</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSSLSM__c</fullName>
        <label>PSS/LSM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoterProfit__c</fullName>
        <label>Promoter Profit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Theater &amp; Clubs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RomeMetrics__c</fullName>
        <label>Rome Metrics</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>Room Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNumberLong__c</fullName>
        <label>RoomNumberLong</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNumber__c</fullName>
        <label>Room Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomOrder__c</fullName>
        <label>Room Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TargetOfficeId__c</fullName>
        <label>Target Office Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Caterease Venues</relationshipLabel>
        <relationshipName>ExternalSystemLookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Venue Ownership</description>
        <label>Venue Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owned/Operated</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Exclusively Booked</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VenueSubType__c</fullName>
        <label>Venue Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VenueType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOB Club-Filler</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Club Nights</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Music Hall</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Foundation Room</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Restaurant</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Special Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VenueType__c</fullName>
        <description>Venue Type</description>
        <label>Venue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Amphitheatre</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Arena</fullName>
                </value>
                <value>
                    <fullName>Stadium</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Boutique Amphitheatre</fullName>
                </value>
                <value>
                    <fullName>Comedy Club</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External System Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EventType__c</columns>
        <columns>EventSubType__c</columns>
        <columns>VenueOwnership__c</columns>
        <columns>VenueType__c</columns>
        <columns>PromoterProfit__c</columns>
        <columns>CoPromoter__c</columns>
        <columns>OperatingExpense__c</columns>
        <columns>PSSLSM__c</columns>
        <columns>Barter__c</columns>
        <columns>Office__c</columns>
        <columns>Region__c</columns>
        <columns>BuyingGroup__c</columns>
        <columns>OracleCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESL-{000000}</displayFormat>
        <label>ESL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External System Lookups</pluralLabel>
    <recordTypes>
        <fullName>CatereaseAccountCode</fullName>
        <active>true</active>
        <label>Caterease Account Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>CatereaseVenue</fullName>
        <active>true</active>
        <label>Caterease Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompanyIdSAPBPC</fullName>
        <active>true</active>
        <description>Company Id transformation rules for SAP BPC</description>
        <label>Company Id - SAP BPC</label>
    </recordTypes>
    <recordTypes>
        <fullName>DepartmentsSAPBPC</fullName>
        <active>true</active>
        <description>Department record type for SAP BPC</description>
        <label>Departments - SAP BPC</label>
    </recordTypes>
    <recordTypes>
        <fullName>GLCompanyOracle</fullName>
        <active>true</active>
        <description>GL Account Unit setup for Events</description>
        <label>GL Company - Oracle</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>